[package]
description = "A Rune to C source file compiler"
edition = "2024"
license = "MIT"
name = "rune_c_compiler"
readme = "README.MD"
repository = "https://github.com/NicolasDandanell/rune_parser"
version = "0.2.0"

[[bin]]
name="rune_c_compiler"
path="src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
rune_parser = { version = "0.4.1" }
