[package]
description = "A Rune to C source file compiler"
edition     = "2024"
license     = "MIT"
name        = "rune_c_compiler"
readme      = "README.MD"
repository  = "https://github.com/NicolasDandanell/rune_c_compiler"
version     = "0.3.2"

[[bin]]
name = "rune_c_compiler"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.5.50", features = ["derive"] }
rune_parser = { version = "0.6.0" }
